--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 15 23:51:48 MSK 2026
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Mon Jan 26 16:34:24 MSK 2026
+sdk.dir=C\:\\Android\\SDK
